--- a/demos/endlessMap/preview-template/index.ejs
+++ b/demos/endlessMap/preview-template/index.ejs
@@ -16,8 +16,8 @@
         <meta name="force-rendering" content="webkit" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <link rel="stylesheet" type="text/css" href="./index.css" />
-        <!-- <script src="https://anseyuyin.github.io/wfc2D/bin/wfc2D.js" ></script> -->
-        <script src="http://192.168.50.134:5500/bin/wfc2D.js" ></script>
+        <script src="https://anseyuyin.github.io/wfc2D/bin/wfc2D.js" ></script>
+        <!-- <script src="http://192.168.50.134:5500/bin/wfc2D.js" ></script> -->
     </head>
     <body>
         <%- include(cocosToolBar, {config: config}) %>
